--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/test0?useSSL=false&serverTimezone=UTC
+spring.datasource.username = Avernus
+spring.datasource.password = password
+server.port=8081
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
