--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/test0?useSSL=false&serverTimezone=UTC
-spring.datasource.username = Avernus
-spring.datasource.password = password
-server.port=8081
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test0?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=Avernus
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.show_sql=true
+
 spring.mvc.hiddenmethod.filter.enabled=true
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
